Added extra functionality to CSS & HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Document</h1>
+    <h1 id="characters">Character List</h1>
+    <ol id="characters">
+        <li><strong>Goku</strong></li>
+        <li><strong>Vegeta</strong></li>
+        <li><strong>Broly</strong></li>
+    </ol>
+
+<div id="characters" class="aside">
+    <h3>Latest Updates</h3>
+</div>
 </body>
 </html>
